fail_crate/tests/duplicate_different_optional.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(optional, optional = 5)]
    x: u32,
}

fn main() {}
